--- a/Add.cshtml
+++ b/Add.cshtml
@@ -1,14 +1,16 @@
 ﻿
-@{ 
+@{
     ViewBag.Title = "Add";
 }
 
-<h2>Them san pham moi:</h2>
-<form action="SinhVienCreate" method="post">
-    <label for="ID:">id</label>
-    <input type="text" name="ID" value="@Model.id" />
-    <label for="Name">name</label>
-    <input type="text" name="Name" value="@Model.name" />
-    <input type="submit" name="Submit" value="Them moi: " />
+
+<h2>Thêm mới sản phẩm</h2>
+
+<form action="/SanPham/Create" method="post">
+    <label for="ID">ID</label>
+    <input type="text" name="ID" value="" />
+    <label for="Name">Name</label>
+    <input type="text" name="Name" value="" />
+    <input type="submit" name="Submit" value="Them moi"/>
 </form>
 
