--- a/Index.cshtml
+++ b/Index.cshtml
@@ -1,6 +1,6 @@
-//CODE index cua DANH MUC
+
 ﻿@{
-    ViewBag.Title = "Danh sách danh mục";
+    ViewBag.Title = "Danh sách Danh Mục";
 }
 
 @*
@@ -11,23 +11,31 @@
 <script type="text/javascript">
         $(document).ready(function () {
             $.ajax({
-                url: '@Url.Action("GetCategories", "DanhMuc")',
-                type: 'POST',
-                dataType: 'json',
-                success: function (data) {
-
-                    console.log(data);
-
-                },
-                error: function () {
-                    alert('Có lỗi xảy ra: ');
+            url: '@Url.Action("GetListDanhMuc", "DanhMuc")',
+            type: 'POST',
+            dataType: 'json',
+            success: function (data) {
+                var tableBody = $('#categoriesTable tbody');
+                tableBody.empty(); // Xóa dữ liệu cũ
+                $.each(data, function (index, item) {
+                    var row = '<tr>' +
+                        '<td>' + item.id + '</td>' +
+                        '<td>' + item.TenDanhMuc + '</td>' +
+                        '<td>' + item.MoTa + '</td>' + 
+                        '<td>' + item.idDanhMucCha + '</td>' +
+                        '</tr>';
+                    tableBody.append(row);
+                });
+            },
+            error: function () {
+                alert('Lỗi khi tải dữ liệu.');
                 }
             });
         });
 </script>
 <div>
     <!-- Danh sách danh mục sẽ được tải ở đây -->
-    <table class="table">
+    <table id="categoriesTable" class="table">
         <thead>
             <tr>
                 <th>ID</th>
@@ -37,9 +45,9 @@
             </tr>
         </thead>
         <tbody id="category-list">
-
         </tbody>
     </table>
 </div>
+
 
 
