--- a/Index.cshtml
+++ b/Index.cshtml
@@ -1,53 +1,33 @@
-
-﻿@{
-    ViewBag.Title = "Danh sách Danh Mục";
+﻿@model List<QLBH.Models.sanpham>
+@{
+    ViewBag.Title = "NHV STORE";
 }
 
-@*
-    Chèn jQuery và AJAX vào View
-*@
+<p style="font-size:250%; font-weight:bold;">DANH SÁCH SẢN PHẨM</p>
+<a href="/SanPham/Add">THÊM SẢN PHẨM</a>
 
-<title>Category List</title>
-<script type="text/javascript">
-        $(document).ready(function () {
-            $.ajax({
-            url: '@Url.Action("GetListDanhMuc", "DanhMuc")',
-            type: 'POST',
-            dataType: 'json',
-            success: function (data) {
-                var tableBody = $('#categoriesTable tbody');
-                tableBody.empty(); // Xóa dữ liệu cũ
-                $.each(data, function (index, item) {
-                    var row = '<tr>' +
-                        '<td>' + item.id + '</td>' +
-                        '<td>' + item.TenDanhMuc + '</td>' +
-                        '<td>' + item.MoTa + '</td>' + 
-                        '<td>' + item.idDanhMucCha + '</td>' +
-                        '</tr>';
-                    tableBody.append(row);
-                });
-            },
-            error: function () {
-                alert('Lỗi khi tải dữ liệu.');
-                }
-            });
-        });
-</script>
+
 <div>
-    <!-- Danh sách danh mục sẽ được tải ở đây -->
-    <table id="categoriesTable" class="table">
+    <table class="table">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Tên Danh Mục</th>
-                <th>Mô Tả</th>
-                <th>ID Cha</th>
+                <th>Mã Sản Phẩm</th>
+                <th>Tên Sản Phẩm</th>
+                <th>Thao Tác</th>
             </tr>
         </thead>
-        <tbody id="category-list">
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.id</td>
+                <td>@item.name</td>
+                <td>
+                    <a href="/SanPham/Edit?id=@item.id">Sửa /</a>
+                    <a href="/SanPham/Delete?id=@item.id">Xóa</a>
+                </td>
+            </tr>
+        }
         </tbody>
     </table>
 </div>
-
-
-
