--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -47,10 +48,10 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
+                    <a href="/SanPham/Index" class="nav-link">Sản Phẩm</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="/DanhMuc/Index" class="nav-link">Danh Mục</a>
                 </li>
             </ul>
 
@@ -192,7 +193,7 @@
                         <img src="~/lib/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Nguyen Hoang Viet</a>
+                        <a href="/SanPham/Index" class="d-block">Nguyen Hoang Viet</a>
                     </div>
                 </div>
 
@@ -248,13 +249,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/DanhMuc" class="nav-link">
+                                    <a href="/DanhMuc/Index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Danh sách danh mục</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="/DanhMuc/Add" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>
                                             Thêm mới
@@ -281,7 +282,7 @@
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/SanPham/Index">Trang chủ</a></li>
                                 <li class="breadcrumb-item active">Dashboard v1</li>
                             </ol>
                         </div><!-- /.col -->
@@ -292,21 +293,13 @@
             <!-- Main content -->
             <section class="content">
                 <div class="container-fluid">
-                    <h1>@ViewBag.Title</h1>                                            </h1>
+                    <h1>@ViewBag.Title</h1>                                            
                     @RenderBody()
                 </div><!-- /.container-fluid -->
             </section>
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 3.2.0
-            </div>
-        </footer>
-
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
             <!-- Control sidebar content goes here -->
@@ -349,7 +342,7 @@
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script src="~/lib/dist/js/pages/dashboard.js"></script>
 
-    
+
 
 
 
